@@ -1,3 +1,8 @@
+2008-04-02 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/TextThought.py
+	Refactoring leads to -200 loc.
+	
 2008-04-02 Martin Schaaf <mascha@ma-scha.de>
 
 	* src/MapList.py
